# rust-file-sync

./: .gitignore  Cargo.toml
src/: config.rs  main.rs
